2006-03-31  Jim Huang  <jserv@kaffe.org>

	* src/nancy_bot/msgdata.cpp: Include <unistd.h>.

2006-03-12  Jim Huang  <jserv@kaffe.org>

	* configure.ac: Added CXXFLAGS += -fno-exceptions and -fno-rtti
	to reduce C++ overhead. In x86, the reduced size could be over
	100kb when debugging is enabled.

2006-03-12  Emfox Zhou  <emfoxzhou@gmail.com>

	* configure.ac, autogen.sh,
	po/zh_TW.po, po/zh_CN.po: Fix intltool related issues.

	* po/pcmanx.pot: deleted, now not necessary.

2005-03-12  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* src/sitepage.cpp,
	src/appconfig.h,
	src/mainframe.cpp,
	src/appconfig.cpp: Polish center alignment mechanism.

2005-03-12  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po: Update the po files.

2005-03-12  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* src/sitepage.cpp,
	src/core/termview.cpp,
	src/core/site.cpp,
	src/core/termview.h,
	src/core/site.h,
	src/appconfig.h,
	src/mainframe.cpp,
	src/sitepage.h,
	src/appconfig.cpp,
	po/zh_TW.po,
	po/zh_CN.po: Modify the horizontal and vertical center align mechanism.

2005-03-11  PCMan (Hong Jen Yee)  <pcman.tw@gmail.com>

	* src/mainframe.cpp,
	po/zh_TW.po: Add missing separator and translation in popup menu.

2005-03-11  PCMan (Hong Jen Yee)  <pcman.tw@gmail.com>

	* src/view/telnetview.cpp (CTelnetView::OnRButtonDown): Add 
	"Input Method" sub menu to popup menu.

2005-03-11  PCMan (Hong Jen Yee)  <pcman.tw@gmail.com>

	* src/sitepage.cpp: Update some text on UI elements.

	* src/view/telnetview.cpp (CTelnetView::OnLButtonUp): Prevent 
	sending mouse action when the user clicked on hyperlinks.

	* src/mainframe.cpp: Move "About" toolbutton to the right of 
	toolbar.

	* po/zh_TW.po: Update zh_TW locale.

	* configure.ac: Bump version number to 0.3.4

2005-03-11  PCMan (Hong Jen Yee)  <pcman.tw@gmail.com>

	* src/core/termview.cpp (CTermView::OnLButtonDown),
	src/view/telnetview.cpp (CTelnetView::OnLButtonUp): Prevent 